[tool.poetry]
name = "umap"
version = "0.5.5"
description = "Uniform Manifold Approximation and Projection"
authors = ["Leland McInnes <leland.mcinnes@gmail.com>"]
readme = "README.rst"
license = "BSD"
repository = "http://github.com/lmcinnes/umap"
keywords = ["dimension", "reduction", "t-sne", "manifold"]
packages = [{ include = "umap", from ="src" }]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.22"
scipy = "^1.8"
scikit-learn = "^1.1"
numba = "^0.57"
pynndescent = "^0.5"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^5.0"
sphinx-gallery = "^0.14.0"
sphinx-rtd-theme = "^1.3.0"
pillow = "^10.0"
matplotlib = "^3.6"
numpydoc = "^1.6"

[tool.poetry.group.plot.dependencies]
pandas = "^2.0.0"
matplotlib = "^3.6.0"
scikit-image = "^0.21.0"
seaborn = "^0.13.0"
datashader = "^0.15.0"
bokeh = "^2.4.3"
holoviews = "^1.17.0"
colorcet = "^3.0.0"

[tool.poetry.group.parametric_umap.dependencies]
tensorflow = "^2.1"
tensorflow-macos = { version = "^2.1", platform = "darwin" }
tensorflow-probability = "^0.20"

[tool.poetry.group.tbb.dependencies]
tbb = { version = "^2019.0", markers = "platform_machine == 'x86_64'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
