[tool.poetry]
name = "umap"
version = "0.5.5"
description = "Uniform Manifold Approximation and Projection"
authors = ["Leland McInnes <leland.mcinnes@gmail.com>"]
readme = "README.rst"
license = "BSD"
repository = "http://github.com/lmcinnes/umap"
keywords = ["dimension", "reduction", "t-sne", "manifold"]
packages = [{ include = "umap", from ="src" }]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.22"
scipy = "^1.8"
scikit-learn = "^1.1"
numba = "^0.57"
pynndescent = "^0.5"
tqdm = "^4.66.1"

# Plot dependencies
pandas = { version = "^2.0.0", optional = true }
matplotlib = { version = "^3.6.0", optional = true }
scikit-image = { version = "^0.21.0", optional = true }
seaborn = { version = "^0.13.0", optional = true }
datashader = { version = "^0.15.0", optional = true }
bokeh = { version = "^2.4.3", optional = true }
holoviews = { version = "^1.17.0", optional = true }
colorcet = { version = "^3.0.0", optional = true }

# Paremetric UMAP dependencies
tensorflow = { version = "^2.2", optional = true }
tensorflow-probability = { version = "^0.20", optional = true }

# TBB dependencies
tbb = { version = "^2019.0", markers = "platform_machine == 'x86_64'", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^5.0"
sphinx-gallery = "^0.14.0"
sphinx-rtd-theme = "^1.3.0"
pillow = "^10.0"
matplotlib = "^3.6"
numpydoc = "^1.6"

[tool.poetry.extras]
parametric_umap = ["tensorflow", "tensorflow-probability"]
tbb = ["tbb"]
plot = ["pandas", "matplotlib", "scikit-image", "seaborn", "datashader", "bokeh", "holoviews", "colorcet"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
